--- a/views/room.ejs
+++ b/views/room.ejs
@@ -12,22 +12,40 @@
     <script>
         const ROOM_ID = "<%= roomId %>"
     </script>
+    
+    <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
     <script defer src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
     <script src="/socket.io/socket.io.js" defer></script>
     <script src="script.js" defer></script>
 </head>
 
 <body>
-    <div id="video-grid"></div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
+    <div class="main">
+        <div class="main__left">
+            <div class="main__videos">
+                <div id="video-grid"></div>
+            </div>
+            <div class="video__controls">
+                <div class="video__controls__block">
+                    <div class="video__control__button">
+                        <i class="fas fa-microphone-alt"></i>
+                        <span>Mute</span>
+                    </div>
+                    <div class="video__control__button">
+                        <span>Stop</span>
+                    </div>
+                    <div class="video__control__button">
+                        <span>End Call</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="main__right">
+            <div class="header">
+                <h5>Chat</h5>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
