--- a/views/styles.css
+++ b/views/styles.css
@@ -1,48 +1,30 @@
 body {                                                                                                                        
-    font-family: 'Raleway', sans-serif;                                                                                         
-  }                                                                                                                             
-  
-footer {                                                                                                                      
-    text-align: center;                                                                                                         
-    margin-top: 2em;                                                                                                            
-  } 
-  
-a{
-    text-decoration: none;
+    font-family: 'Raleway', sans-serif; 
+    margin: 0;
+    padding: 0;                                                                                        
 }
-  
-  h2 {                                                                                                                          
-    font-style: italic;                                                                                                         
-  }                                                                                                                             
-  
-  header {                                                                                                                      
-    text-align: center;                                                                                                         
-    margin: 4em;                                                                                                                
-  }                                                                                                                             
-  
-  header h1, header h2 {         
-    display: inline;             
-  }                              
-  
-  header h1 a, header h2 a, header h1 a:hover, header h2 a:hover {                                                              
-    color: inherit;              
-    text-decoration: none;       
-  }                              
-  
-  header h2 {                    
-    font-size: 24px;             
-    padding-left: .5em;          
-  }
-.container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}                              
-  
-  #remotes {                     
-    visibility: hidden;          
-  }
+
+.main{
+  height: 100vh;
+  display: flex;
+}
+
+.main__left{
+  flex: 0.0;
+  display: flex;
+  flex-direction: column;
+}
+.main__right{
+  flex: 0.2;
+}
+
+.main__videos{
+  flex-grow: 1;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 #video-grid{
     display: grid;
@@ -51,7 +33,7 @@ a{
 }
 
 video{
-    width: 100%;
-    height: 100%;
+    width: 300px;
+    height: 400px;
     object-fit: cover;
 }
