:package: Application Interaction buttons

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css?family=Raleway"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../public/style.css"/>
+    <link rel="stylesheet" href="style.css"/>
     <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -45,10 +45,6 @@
               <i class="fas fa-user-friends"></i>
               <span>Participants</span>
             </div>
-            <div class="main__controls__button">
-              <i class="fas fa-comment-alt"></i>
-              <span>Chat</span>
-            </div>
           </div>
           <div class="main__controls__block">
             <div
@@ -65,10 +61,18 @@
               <i class="fas fa-video"></i>
               <span>Stop Video</span>
             </div>
+            <div
+            onclick="muteUnmute()"
+            class="main__controls__button leave_meeting"
+          >
+          <i class="fas fa-phone-slash"></i>
+            <span class="leave_meeting">Leave</span>
+          </div>
           </div>
           <div class="main__controls__block">
             <div class="main__controls__button">
-              <span class="leave_meeting">Leave Meeting</span>
+              <i class="fas fa-comment-alt"></i>
+              <span>Chat</span>
             </div>
           </div>
         </div>
